# SGEEngine

./: .clang-format  CMakeLists.txt  README.md  apply_clang_format.py  copy_engine_helper.cmake
libs/sge_audio/: CMakeLists.txt
libs/sge_audio/src/sge_audio/: AudioDevice.cpp  AudioDevice.h  miniaudio_implement.cpp
libs/sge_codepreproc/: CMakeLists.txt
libs/sge_codepreproc/src/sge_codepreproc/: sge_codepreproc.cpp  sge_codepreproc.h
libs/sge_core/: CMakeLists.txt
libs/sge_core/core_shaders/: ConstantColor.hlsl  FWDDefault_buildShadowMaps.hlsl  FWDDefault_buildShadowMaps.shader  FWDDefault_shading.hlsl  FWDDefault_shading.shader  FWDSimpleTriplanar.hlsl  ShadeCommon.h  ShaderLightData.h  SkyGradient.hlsl  SkyGradient.shader  lib_dither.hlsl  lib_lighting.hlsl  lib_lighting.shader  lib_pbr.hlsl  lib_textureMapping.hlsl  lib_textureMapping.shader
libs/sge_core/core_shaders/common/: Readme.txt
libs/sge_core/src/sge_core/: Animator.cpp  Animator.h  AssetLibrary.cpp  AssetLibrary.h  Camera.cpp  Camera.h  DebugDraw.cpp  DebugDraw.h  GeomGen.cpp  GeomGen.h  Geometry.h  ICore.cpp  ICore.h  QuickDraw.cpp  QuickDraw.h  SGEImGui.cpp  SGEImGui.h  Sprite.cpp  Sprite.h  setImGuiContexCore.cpp  sgecore_api.h
libs/sge_core/src/sge_core/AssetLibrary/: AssetAudio.cpp  AssetAudio.h  AssetGeomLitShader.cpp  AssetGeomLitShader.h  AssetLibrary.cpp  AssetLibrary.h  AssetMaterial.cpp  AssetMaterial.h  AssetModel3D.cpp  AssetModel3D.h  AssetSpriteAnim.cpp  AssetSpriteAnim.h  AssetText.cpp  AssetText.h  AssetTexture2D.cpp  AssetTexture2D.h  IAsset.h  IAssetInterface.h
libs/sge_core/src/sge_core/GameUI/: IWidget.cpp  IWidget.h  Layout.cpp  Layout.h  ProggyCleanTTF.h  Sizing.h  UIContext.cpp  UIContext.h  Widget.cpp  Widget.h
libs/sge_core/src/sge_core/GameUI/widgets/: Button.cpp  Button.h  Checkbox.cpp  Checkbox.h  ColoredWidget.cpp  ColoredWidget.h  ColumnLayout.cpp  ColumnLayout.h  ImageWidget.cpp  ImageWidget.h  InvisibleWidget.h  RowLayout.cpp  RowLayout.h  TextWidget.cpp  TextWidget.h
libs/sge_core/src/sge_core/QuickDraw/: Font.cpp  Font.h  QuickDraw.cpp  QuickDraw.h  SolidDrawer.cpp  SolidDrawer.h  TextRender.cpp  TextRender.h  TextRender2D.cpp  TextRender2D.h  TextureDrawer.cpp  TextureDrawer.h  WireframeDrawer.cpp  WireframeDrawer.h
libs/sge_core/src/sge_core/TrasnformGizmos/: Gizmo3D.cpp  Gizmo3D.h  Gizmo3DDraw.cpp  Gizmo3DDraw.h
libs/sge_core/src/sge_core/application/: application.cpp  application.h  input.cpp  input.h
libs/sge_core/src/sge_core/containers/: MultiObjectArena.h
libs/sge_core/src/sge_core/dds/: dds.cpp  dds.h
libs/sge_core/src/sge_core/materials/: DefaultPBRMtl.cpp  DefaultPBRMtl.h  IGeometryDrawer.cpp  IGeometryDrawer.h  IMaterial.h  IMaterialFamily.h  MaterialFamilyList.cpp  MaterialFamilyList.h
libs/sge_core/src/sge_core/materials/DefaultPBRMtl/: DefaultPBRMtl.cpp  DefaultPBRMtl.h  DefaultPBRMtlGeomDrawer.cpp  DefaultPBRMtlGeomDrawer.h
libs/sge_core/src/sge_core/materials/GenericGeomListShader/: GenericGeomListShader.cpp  GenericGeomListShader.h
libs/sge_core/src/sge_core/model/: CollisionMesh.h  EvaluatedModel.cpp  EvaluatedModel.h  Model.cpp  Model.h  ModelAnimator.cpp  ModelAnimator.h  ModelAnimator2.cpp  ModelAnimator2.h  ModelReader.cpp  ModelReader.h  ModelWriter.cpp  ModelWriter.h
libs/sge_core/src/sge_core/shaders/: ConstantColorShader.cpp  ConstantColorShader.h  FWDBuildShadowMapShader.cpp  FWDBuildShadowMapShader.h  LightDesc.cpp  LightDesc.h  ShadingProgramPermuator.cpp  ShadingProgramPermuator.h  ShadingProgramPermuatorCache.cpp  ShadingProgramPermuatorCache.h  SkyShader.cpp  SkyShader.h  modeldraw.cpp  modeldraw.h
libs/sge_core/src/sge_core/typelib/: MemberChain.cpp  MemberChain.h  typeLib.cpp  typeLib.h  typeLib_RegisterCommonTypes.cpp
libs/sge_core/src/sge_core/ui/: MultiCurve2DEditor.cpp  MultiCurve2DEditor.h
libs/sge_log/: CMakeLists.txt
libs/sge_log/src/sge_log/: Log.cpp  Log.h  sge_log_api.h
libs/sge_renderer/: CMakeLists.txt
libs/sge_renderer/src/sge_renderer/d3d11/: Buffer_d3d11.cpp  D3D11ContextStateCache.cpp  D3D11ContextStateCache.h  FrameTarget_d3d11.cpp  FrameTarget_d3d11.h  GraphicsCommon_d3d11.cpp  GraphicsCommon_d3d11.h  GraphicsInterface_d3d11.cpp  GraphicsInterface_d3d11.h  Query_d3d11.cpp  RenderState_d3d11.cpp  SamplerState_d3d11.cpp  ShaderReflection_d3d11.cpp  Shader_d3d11.cpp  Shader_d3d11.h  ShadingProgram_d3d11.cpp  Texture_d3d11.cpp  Texture_d3d11.h  include_d3d11.h
libs/sge_renderer/src/sge_renderer/gl/: Buffer_gl.cpp  FrameTarget_gl.cpp  FrameTarget_gl.h  GLContextStateCache.cpp  GLContextStateCache.h  GraphicsCommon_gl.cpp  GraphicsCommon_gl.h  GraphicsInterface_gl.cpp  GraphicsInterface_gl.h  Query_gl.cpp  RenderState_gl.cpp  SamplerState_gl.cpp  ShaderReflection_gl.cpp  Shader_gl.cpp  Shader_gl.h  ShadingProgram_gl.cpp  ShadingProgram_gl.h  Texture_gl.cpp  Texture_gl.h  opengl_include.cpp  opengl_include.h
libs/sge_renderer/src/sge_renderer/renderer/: APICommands.cpp  APICommands.h  GraphicsCommon.cpp  GraphicsCommon.h  HLSLTranslator.cpp  HLSLTranslator.h  ShaderReflection.cpp  ShaderReflection.h  renderer.cpp  renderer.h
libs_ext/assimp/: CMakeLists.txt
libs_ext/assimp/assimp/code/AssetLib/glTF2/: glTF2Exporter.cpp
(+441 files in other folders)
